@@ -70,6 +70,11 @@ getJavaSpecificOpts() {
           --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
           --add-opens=java.base/java.math=ALL-UNNAMED \
           --add-opens=java.sql/java.sql=ALL-UNNAMED \
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+          --add-opens=java.base/java.time=ALL-UNNAMED \
+          --add-opens=java.base/java.text=ALL-UNNAMED \
+          --add-opens=java.management/sun.management=ALL-UNNAMED \
+          --add-opens java.desktop/java.awt.font=ALL-UNNAMED \
           ${current_value}"
   fi
 
